# Dark-Lands-psvita

./: CMakeLists.txt  README.md  prepare_dla_folder.py
extras/scripts/: convert_apk_audio.py
lib/so_util/: so_util.c  so_util.h
source/: SharedPreferences.cpp  SharedPreferences.h  audio.cpp  debug_log.h  dynlib.c  dynlib.h  game_prefs.h  java.c  main.c  patch.c
source/reimpl/: asset_manager.cpp  asset_manager.h  controls.c  io.c  io.h  log.c  pthr.c  sys.c  zlib_compat.h
source/utils/: glutil.c  glutil.h  init.c  settings.c
